--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,6 @@ command = "hugo --gc --minify"
 [context.production.environment]
 HUGO_VERSION = "0.59.1"
 HUGO_ENV = "production"
-HUGO_ENABLEGITINFO = "true"
 
 [context.split1]
 command = "hugo --gc --minify --enableGitInfo"
@@ -19,12 +18,14 @@ command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
 [context.deploy-preview.environment]
 HUGO_VERSION = "0.59.1"
+HUGO_ENV = "dev"
 
 [context.branch-deploy]
 command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
 
 [context.branch-deploy.environment]
 HUGO_VERSION = "0.59.1"
+HUGO_ENV = "dev"
 
 [context.next.environment]
 HUGO_ENABLEGITINFO = "true"
