--- a/themes/uoc/static/admin/config.yml
+++ b/themes/uoc/static/admin/config.yml
@@ -7,24 +7,112 @@ backend:
   #client_id: b135b68c2ba0bd0c422a
   #name: git-gateway
 
-media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
-public_folder: "/images/uploads"
+media_folder: "static/img" # Media files will be stored in the repo under static/images/uploads
+public_folder: "/img"
 #publish_mode: editorial_workflow
 
 collections: # A list of collections the CMS should be able to edit
-  - name: "section"
-    label: "Section"
+  - name: "principal"
+    label: "Principal"
     folder: "content"
-    filter: {field: "contenttype", value: "section"}    
+    format: "json"
+    #filter: {field: "contenttype", value: "section"}    
     create: true
-    slug: "_index.{{language}}"
-    fields:
-      - {label: "Visible", name: "visible", widget: "boolean", default: false, required: false}
-      - {label: "Content Type", name: "contenttype", widget: "hidden", default: "section"}
-      - {label: "Language", name: "language", widget: "select", options: ["ca", "es", "en"]}
-      - {label: "Order", name: "weight", widget: "number", default: 1}
-      - {label: "Title", name: "title", widget: "string", tagname: "h1"}
-      - {label: "Description", name: "description", widget: "text", required: false}
+    slug: "principal.{{language}}"
+    files:
+      - file: "content/principal/principal.md"
+        label: "Principal"
+        name: "principal"
+        fields:
+          - {label: Title, name: title, widget: string}
+      - file: "content/principal/principal.{{language}}.md"
+        label: "Menu"
+        name: "menu"
+        fields:
+          - {label: ambits_especialitzacio, name: ambits_especialitzacio, widget: list, 
+              fields:[
+                - {label: display_name, name : display_name, widget: string}
+                - {label: value, name: value, widget: string}
+              ]
+            }
+          - {label: ods, name: ods, widget: list, 
+              fields:[
+                - {label: display_name, name : display_name, widget: string}
+                - {label: value, name: value, widget: string}
+                - {label: img, name: img, widget : image}
+              ]
+            }
+          - {label: centre , name: centre , widget: list,
+              fields:[
+                - {label: display_value, name: display_value, widget : string}
+                - {label: value, name: value, widget: string}
+              ]
+            }
+      - file: "content/mapa-ambits-recerca/mapa-ambits-recerca.{{language}}.md"
+        label: "mapa-ambits-recerca"
+        name: "mapa-ambits-recerca"
+        fields:
+          - {label: ambits_especialitzacio, name: ambits_especialitzacio, widget: list, 
+              fields:[
+                - {label: display_name, name : display_name, widget: string}
+                - {label: value, name: value, widget: string}
+              ]
+            }
+          - {label: ambits, name: ambits, widget: list, 
+              fields:[
+                - {label: display_name, name : display_name, widget: string}
+                - {label: value, name: value, widget: string}
+              ]
+            }
+      - file: "content/contacte/contacte.{{language}}.md"
+        label: "contacte"
+        name: "contacte"
+        fields:
+          - {label: title, name: title, widget: string}
+          - {label: section,name: section ,widget: list, 
+              fields:[
+                - {label: title, name : title, widget: string}
+                - {label: form, name: form, widget: boolean}
+                - {label: name, name : name, widget: string}
+                - {label: addr_1, name: addr_1, widget: Text}
+                - {label: addr_2, name: addr_2, widget: Text}
+                - {label: phones, name: phones, widget: list, 
+                    field: {widget: number, valueType: int}
+                  }
+                - {label: urls, name: urls, widget: list, 
+                    field: {widget: Text}
+                  }
+              ]
+            }
+          - {label: motius, name: motius, widget: list, 
+              fields:[
+                - {label: display_name, name : display_name, widget: string}
+                - {label: value, name: value, widget: Text}
+              ]
+            }
+      - file: "content/cercador/cercador.{{language}}.md"
+        label: "Cercador"
+        name: "cercador"
+        fields:
+          - {label: ambits_especialitzacio, name: ambits_especialitzacio, widget: list, 
+              fields:[
+                - {label: display_name, name : display_name, widget: string}
+                - {label: value, name: value, widget: string}
+              ]
+            }
+          - {label: ods, name: ods, widget: list, 
+              fields:[
+                - {label: display_name, name : display_name, widget: string}
+                - {label: value, name: value, widget: string}
+                - {label: img, name: img, widget : image}
+              ]
+            }
+          - {label: centre , name: centre , widget: list,
+              fields:[
+                - {label: display_value, name: display_value, widget : string}
+                - {label: value, name: value, widget: string}
+              ]
+            }
     meta:
       - {label: "Date", name: "date", widget: "datetime"}
     editor:
