--- a/themes/uoc/static/admin/config.yml
+++ b/themes/uoc/static/admin/config.yml
@@ -15,12 +15,25 @@ collections: # A list of collections the CMS should be able to edit
   - name: "principal"
     label: "Principal"
     folder: "content/principal"
-    extension: "md"
+    extension: "json"
     #filter: {field: "contenttype", value: "section"}    
     create: true
     #slug: "principal.{{language}}"
     fields:
           - {label: Title, name: title, widget: string}
+          - {label: ambits_especialitzacio, name : ambits_especialitzacio, widget: list, fields : 
+              - { label : display_name, name: display_name, widget: string }
+              - { label : value, name: value, widget: Text }
+            }
+          - {label: ods, name : ods, widget: list, fields : 
+              - { label : display_name, name: display_name, widget: string }
+              - { label : value, name: value, widget: Text }
+              - { label : color, name : color, widget : string }
+            }
+          - {label: centre, name : centre, widget: list, fields : 
+              - { label : display_name, name: display_name, widget: string }
+              - { label : value, name: value, widget: Text }
+            }
     meta:
       - {label: "Date", name: "date", widget: "datetime"}
     editor:
