--- a/themes/uoc/static/admin/config.yml
+++ b/themes/uoc/static/admin/config.yml
@@ -14,7 +14,7 @@ public_folder: "/img"
 collections: # A list of collections the CMS should be able to edit
   - name: "principal"
     label: "Principal"
-    folder: "content/"
+    folder: "content/principal"
     #format: "md"
     #extension: "json"
     #filter: {field: "contenttype", value: "section"}    
@@ -22,7 +22,7 @@ collections: # A list of collections the CMS should be able to edit
     #slug: "principal.{{language}}"
     #identifier_field: title
     fields:
-          - {label: Title, name: title, widget: string}
+          - {label: title, name: title, widget: string}
     meta:
       - {label: "Date", name: "date", widget: "datetime"}
     editor:
