--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,7 +3,7 @@ backend:
   name: github # FALTA CONFIGURAR GIT Y NERTLIFY PARA QUE SE COMUNIQUEN!!!!!!!!!
   repo: albirasolutions/UOC_WebRI
   branch: victor
-  #base_url: http://uoc-web-ri.s3-eu-west-1.amazonaws.com
+  base_url: https://uoc-web-ri.s3-eu-west-1.amazonaws.com
   #client_id: 05de47c07b638caed5f9
   #name: git-gateway
 
