--- a/themes/uoc/static/admin/config.yml
+++ b/themes/uoc/static/admin/config.yml
@@ -3,11 +3,11 @@ backend:
   name: github # FALTA CONFIGURAR GIT Y NERTLIFY PARA QUE SE COMUNIQUEN!!!!!!!!!
   repo: albirasolutions/UOC_WebRI
   branch: victor
-  base_url: http://uoc-web-ri.s3-eu-west-1.amazonaws.com
+  base_url: https://uoc-web-ri.s3-eu-west-1.amazonaws.com
   #client_id: 05de47c07b638caed5f9
   #name: git-gateway
 
-media_folder: "static/img" # Media files will be stored in the repo under static/images/uploads
+media_folder: "static/img" # Media files will be stored in the repo under static/img/
 public_folder: "/img"
 #publish_mode: editorial_workflow
 
