--- a/netlify.toml
+++ b/netlify.toml
@@ -14,14 +14,14 @@ HUGO_VERSION = "0.59.1"
 HUGO_ENV = "production"
 
 [context.deploy-preview]
-command = "hugo --gc --minify --buildFuture -b $BASE_URL"
+command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
 [context.deploy-preview.environment]
 HUGO_VERSION = "0.59.1"
 HUGO_ENV = "dev"
 
 [context.branch-deploy]
-command = "hugo --gc --minify -b $BASE_URL"
+command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
 
 [context.branch-deploy.environment]
 HUGO_VERSION = "0.59.1"
