--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -15,11 +15,112 @@ collections: # A list of collections the CMS should be able to edit
   - name: "principal"
     label: "Principal"
     files:
-      - label: "Title"
+      - file : "content/principal/principal.md"
+        label: "Title"
         name: "title"
-        file: "content/principal/principal.md"
         fields:
           - {label: title, name: title, widget: string}
+      - file : "content/principal/principal.{{language}}.md"
+        label: "Home Page"
+        name : "homePage"
+        fields:
+          - {label: title, name: title, widget: string}
+          - label: ambits_especialitzacio
+            name : ambits_especialitzacio
+            widget: list
+            fields : 
+              - {label: display_name, name: display_name, widget: string }
+              - {label: value, name: value, widget: string }
+          - label: ods
+            name : ods 
+            widget: list 
+            fields : 
+              - { label : display_name, name: display_name, widget: string }
+              - { label : value, name: value, widget: string }
+              - { label : color, name : color, widget : string }
+          - label: sector_productiu
+            name : sector_productiu 
+            widget: list 
+            fields : 
+              - { label : display_name, name: display_name, widget: string }
+              - { label : value, name: value, widget: string }
+          - label: centre
+            name : centre 
+            widget: list
+            fields : 
+              - { label : display_name, name: display_name, widget: string }
+              - { label : value, name: value, widget: string }
+      - file : "content/cercador/cercador.{{language}}.md"
+        label : "Cercador"
+        name: "cercador"
+        fields : 
+          - {label: title, name: title, widget: string}
+          - label: ambits_especialitzacio
+            name : ambits_especialitzacio
+            widget: list
+            fields : 
+              - {label: display_name, name: display_name, widget: string }
+              - {label: value, name: value, widget: string }
+          - label: ods
+            name : ods 
+            widget: list 
+            fields : 
+              - { label : display_name, name: display_name, widget: string }
+              - { label : value, name: value, widget: string }
+              - { label : color, name : color, widget : string }
+          - label: centre
+            name : centre 
+            widget: list
+            fields : 
+              - { label : display_name, name: display_name, widget: string }
+              - { label : value, name: value, widget: string }
+      - file : "content/mapa-ambits-recerca/mapa-ambits-recerca.{{language}}.md"
+        label : "Mapa ambits recerca"
+        name : "mapa-ambits-recerca"
+        fields :
+          - {label: title, name: title, widget: string}
+          - label: ambits_especialitzacio
+            name : ambits_especialitzacio
+            widget: list
+            fields : 
+              - {label: display_name, name: display_name, widget: string }
+              - {label: value, name: value, widget: string }
+          - label: ambit
+            name : ambit
+            widget: list 
+            fields : 
+              - { label : display_name, name: display_name, widget: string }
+              - { label : value, name: value, widget: string }
+      - file: "content/contacte/contacte.{{language}}.md"
+        label: "contacte"
+        name: "contacte"
+        fields:
+          - {label: title, name: title, widget: string}
+          - label: section
+            name: section
+            widget: list 
+            fields:
+                - {label: title, name : title, widget: string}
+                - {label: form, name: form, widget: boolean}
+                - {label: name, name : name, widget: string}
+                - {label: addr_1, name: addr_1, widget: Text}
+                - {label: addr_2, name: addr_2, widget: Text}
+                - label: phones
+                  name: phones
+                  widget: list 
+                  fields: 
+                    -  {widget: number, valueType: int}
+                - label: urls
+                  name: urls
+                  widget: list 
+                  fields:
+                    - {widget: Text}
+          - label: motius
+            name: motius
+            widget: list 
+            fields:
+                - {label: display_name, name : display_name, widget: string}
+                - {label: value, name: value, widget: Text}
     meta:
       - {label: "Date", name: "date", widget: "datetime"}
     editor:
