--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -14,10 +14,20 @@ public_folder: "/img"
 collections: # A list of collections the CMS should be able to edit
   - name: "principal"
     label: "Principal"
+    folder: "content/principal"
+    format: "json"
+    #filter: {field: "contenttype", value: "section"}    
+    create: true
+    #slug: "principal.{{language}}"
     files:
-      - file : "content/principal/principal.{{language}}.md"
-        label: "Home Page"
-        name : "homePage"
+      - file: "content/principal/principal.md"
+        label: "Principal"
+        name: "principal"
+        fields:
+          - {label: Title, name: title, widget: string}
+      - file: "content/principal/principal.{{language}}.md"
+        label: "Menu"
+        name: "menu"
         fields:
           - {label: title, name: title, widget: string}
           - label: ambits_especialitzacio
@@ -45,10 +55,18 @@ collections: # A list of collections the CMS should be able to edit
             fields : 
               - { label : display_name, name: display_name, widget: string }
               - { label : value, name: value, widget: string }
-      - file : "content/cercador/cercador.{{language}}.md"
-        label : "Cercador"
-        name: "cercador"
-        fields : 
+  - name: "cercador"
+    label: "Cercador"
+    folder: "content/cercador"
+    format: "json"
+    #filter: {field: "contenttype", value: "section"}    
+    create: true
+    #slug: "cercador.{{language}}"
+    files:
+      - file: "content/cercador/cercador.{{language}}.md"
+        label: "cercador"
+        name: "Cercador"
+        fields:
           - {label: title, name: title, widget: string}
           - label: ambits_especialitzacio
             name : ambits_especialitzacio
@@ -69,10 +87,18 @@ collections: # A list of collections the CMS should be able to edit
             fields : 
               - { label : display_name, name: display_name, widget: string }
               - { label : value, name: value, widget: string }
-      - file : "content/mapa-ambits-recerca/mapa-ambits-recerca.{{language}}.md"
-        label : "Mapa ambits recerca"
-        name : "mapa-ambits-recerca"
-        fields :
+  - name: "mapa-ambits-recerca"
+    label: "mapa-ambits-recerca"
+    folder: "content/mapa-ambits-recerca"
+    format: "json"
+    #filter: {field: "contenttype", value: "section"}    
+    create: true
+    #slug: "mapa-ambits-recerca.{{language}}"
+    files:
+      - file: "content/cercador/mapa-ambits-recerca.{{language}}.md"
+        label: "mapa-ambits-recerca"
+        name: "mapa-ambits-recerca"
+        fields:
           - {label: title, name: title, widget: string}
           - label: ambits_especialitzacio
             name : ambits_especialitzacio
@@ -81,41 +107,51 @@ collections: # A list of collections the CMS should be able to edit
               - {label: display_name, name: display_name, widget: string }
               - {label: value, name: value, widget: string }
           - label: ambit
-            name : ambit
+            name : ambit 
             widget: list 
             fields : 
               - { label : display_name, name: display_name, widget: string }
               - { label : value, name: value, widget: string }
+              - { label : color, name : color, widget : string }
+  - name: "contacte"
+    label: "contacte"
+    folder: "content/contacte"
+    format: "json"
+    #filter: {field: "contenttype", value: "section"}    
+    create: true
+    #slug: "mapa-ambits-recerca.{{language}}"
+    files:
       - file: "content/contacte/contacte.{{language}}.md"
-        label: "contacte"
         name: "contacte"
+        label: "contacte"
         fields:
           - {label: title, name: title, widget: string}
           - label: section
             name: section
             widget: list 
             fields:
-                - {label: title, name : title, widget: string}
-                - {label: form, name: form, widget: boolean}
-                - {label: name, name : name, widget: string}
-                - {label: addr_1, name: addr_1, widget: Text}
-                - {label: addr_2, name: addr_2, widget: Text}
-                - label: phones
-                  name: phones
-                  widget: list 
-                  fields: 
-                    -  {widget: number, valueType: int}
-                - label: urls
-                  name: urls
-                  widget: list 
-                  fields:
-                    - {widget: Text}
+                - label: contact_obj
+                  name: contact_obj
+                  widget: object,
+                  fields :
+                    - {label: form, name: form, widget: boolean}
+                    - {label: name, name : name, widget: string}
+                    - {label: addr_1, name: addr_1, widget: Text}
+                    - {label: addr_2, name: addr_2, widget: Text}
+                    - label: phones
+                      name: phones
+                      widget: list 
+                      field: {widget: number, valueType: int}
+                    - label: urls
+                      name: urls
+                      widget: list
+                      field: {widget: Text}
           - label: motius
             name: motius
             widget: list 
             fields:
-                - {label: display_name, name : display_name, widget: string}
-                - {label: value, name: value, widget: Text}
+              - {label: display_name, name : display_name, widget: string}
+              - {label: value, name: value, widget: Text}
     meta:
       - {label: "Date", name: "date", widget: "datetime"}
     editor:
